--- a/css/styles.css
+++ b/css/styles.css
@@ -2,24 +2,61 @@
     margin: 0;
     padding: 0;
     font-family: "Open Sans", sans-serif;
+    text-decoration: none;
+    color: inherit;
+}
+
+html, body { 
+  width: 100%;
+  height: 100%; 
+  background: #00000075;
+}
+
+.background {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background: radial-gradient(ellipse  at 30%  100%, transparent 0%, rgb(90,74,136) 75%, rgb(104,73,142) 100%) 35% 35%/140% 170%,
+              linear-gradient(220deg, rgb(106,118,190) 0%, rgb(158,86,167) 60%, rgb(82,94,170) 100%);
+
+}
+
+.main-container {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+    height: 100vh;
 }
 
 .profile-card {
-    margin: auto;
-    padding: auto;
-
     display: flex;
     flex-direction: column;
     align-items: center;
     align-content: center;
-    justify-content: space-evenly;
-    width: 500px;
-    height: 800px;
-
-    /* background */
-    border-radius: 5%;
+    justify-content: stretch;
+    padding: 5vh;
+    margin: 0 2% 0 2%;
+    gap: 2vh;
+    border: 0.1vh solid rgba(118, 24, 206, 0.726);
+    border-radius: 3.5vh ;
     background-color: black;
+    box-shadow: 0 0 3vh rgb(0, 0, 0);
     color: rgb(255, 255, 255);
+}
+
+.projects-container{
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: center;
+    background-color: blueviolet;
+    align-items: stretch;
+    gap: 20px;
+    width: 60%;
+    height: 800px;
 }
 
 .avatar {
@@ -31,4 +68,10 @@
 .about-me {
     text-align: center;
     margin: 10px;
+}
+
+.test{
+    width: 200px;
+    height: 200px;
+    background-color: red;
 }
