--- a/css/styles.css
+++ b/css/styles.css
@@ -31,114 +31,45 @@ html, body {
 .main-container {
     display: flex;
     align-content: center;
-    width: 100%;
-    height: 100vh;
+    flex-wrap: wrap;
 }
-
-
-@media screen and (max-width: 1000px) {
-    .main-container {
-        flex-wrap: wrap;
-        align-content: flex-start;
-        height: auto;
-    }
-
-    .profile-card {
-        width: 100%;
-        font-size: 1rem;
-    }
-
-    .avatar {
-        width: 50%;
-        height: 50%;
-    }
-
-    img {
-        width: 15%;
-        height: 15%;
-    }
-
-    .projects-container {
-        flex-direction: column;
-        flex-wrap: nowrap;
-        text-align: center;
-    }
-}
-
-/* @media screen and (min-width: 601px) and (max-width: 768px) {
-    html, body {
-        font-size: 14px;
-    }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-    html, body {
-        font-size: 16px;
-    }
-}
-
-@media screen and (min-width: 1025px) {
-    html, body {
-        font-size: 18px;
-    }
-} */
 
 .profile-card {
     display: flex;
     flex-direction: column;
     align-items: center;
     align-content: center;
-    border-top: 0.3vh solid rgba(118, 24, 206, 0.8);
-    border-bottom: 0.1vh solid rgba(118, 24, 206, 0.6);
-    border-left: 0.3vh solid rgba(118, 24, 206, 0.8);
-    border-right: 0.1vh solid rgba(118, 24, 206, 0.6);
-    border-radius: 3.5vh ;
-    background-color: black;
-    box-shadow: 0 0 3vh rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
+    border-top: 2px solid rgba(110, 0, 255, 0.65);
+    border-bottom: 1px solid rgba(110, 0, 255, 0.65);
+    border-left: 2px solid rgba(110, 0, 255, 0.65);
+    border-right: 1px solid rgba(110, 0, 255, 0.65);
+    border-radius: 30px;
+    background-color: rgba(0, 0, 0, 0.65);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.75);
 
     margin: 3%;
     padding: 7% 3% 7% 3%;
 }
 
-.projects-card {
+.start-section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    align-content: center;
-    border-top: 0.3vh solid rgba(118, 24, 206, 0.8);
-    border-bottom: 0.1vh solid rgba(118, 24, 206, 0.6);
-    border-left: 0.3vh solid rgba(118, 24, 206, 0.8);
-    border-right: 0.1vh solid rgba(118, 24, 206, 0.6);
-    border-radius: 3.5vh ;
-    background-color: black;
-    box-shadow: 0 0 3vh rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-    width: 100%;
-    margin: 3%;
-    padding: 7% 3% 7% 3%;
-}
-
-.projects-container{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(0, 0, 0);
-    width: 100%;
-    height: 100%;
 }
 
 .avatar {
+    width: calc(20vh + 20vw);
     border-radius: 100%;
-    border: 2px solid rgb(0, 0, 0);
-    box-shadow: 0px 0px 50px rgb(119, 0, 255);
+    border: 3px solid rgb(0, 0, 0);
+    box-shadow: -15px 0px 15px rgba(111, 0, 255, 0.5), 15px 0px 15px rgba(0, 179, 255, 0.5);
 }
 
-.test{
-    width: 200px;
-    height: 200px;
-    background-color: red;
+.username {
+    padding: 15px 0 0 0;
+    color: white;
+    text-decoration: underline rgba(110, 0, 255, 0.65) 2px;
+    text-underline-offset: 5px;
+    font-size: calc(2.5vh + 2.5vw);
 }
 
 .boxes {
@@ -149,8 +80,47 @@ html, body {
     box-shadow: 0 2px 5px 0px rgba(186, 101, 255, 0.452), 0 10px 5px 0 rgba(119, 0, 255, 0.479);
     color: rgba(255, 255, 255, 0.808);
     margin: 10% 0 0 0;
+    padding: 2.5% 0 2.5% 0;
     width: 100%;
 }
+
+.contacts-size {
+    width: 15%;
+    padding: 5px 20px 0 20px;
+}
+
+.projects-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    border-top: 2px solid rgba(110, 0, 255, 0.65);
+    border-bottom: 1px solid rgba(110, 0, 255, 0.65);
+    border-left: 2px solid rgba(110, 0, 255, 0.65);
+    border-right: 1px solid rgba(110, 0, 255, 0.65);
+    border-radius: 30px;
+    background-color: rgba(0, 0, 0, 0.65);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.75);
+    color: rgb(255, 255, 255);
+    width: 100%;
+    margin: 3%;
+    padding: 7% 3% 7% 3%;
+}
+
+.projects-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.test{
+    width: 200px;
+    height: 200px;
+    background-color: red;
+}
+
+
 
 .boxes2 {
     display: flex;
@@ -162,12 +132,16 @@ html, body {
     background: linear-gradient(180deg, rgba(47, 48, 48, 0.192) 0%, rgba(60, 0, 139, 0.555) 100%);
     box-shadow: 0 0px 5px 0px rgba(119, 0, 255, 0.479), 0 10px 5px 0 rgba(119, 0, 255, 0.479);
     color: rgba(255, 255, 255, 0.808);
-    margin: 2%;
-    width: 30%;
-    height: 15%;
+    margin: 5%;
+    width: 100%;
+    height: 50px;
+}
+
+.boxes2:hover {
+    background-color: rgba(0, 0, 0, 0.75);
 }
 
 p {
     color: var(--gray);
-    margin: 2.5% 0 2.5% 0;
+    margin: 2.5% 0 0 0;
 }
